fix: Embed Museo Sans physical webfonts to ensure rendering on mobile devices and Vercel

--- a/src/index.css
+++ b/src/index.css
@@ -14,9 +14,26 @@
 
 @font-face {
   font-family: 'Museo Sans';
-  src: local('Museo Sans'), local('MuseoSans');
-  font-weight: normal;
+  src: url('./fonts/MuseoSans_500.otf') format('opentype');
+  font-weight: 400;
   font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Museo Sans';
+  src: url('./fonts/MuseoSans_700.otf') format('opentype');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Museo Sans';
+  src: url('./fonts/MuseoSans_700.otf') format('opentype');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
 }
 
 body {
